iptables.txt
# Generated by iptables-save v1.8.5 on Mon May 13 04:58:32 2024
*filter
:INPUT ACCEPT [32867:8432337]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28097:10730743]
:BareMetalInstanceServices - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-7ae5807ed71b -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7ae5807ed71b -j DOCKER
-A FORWARD -i br-7ae5807ed71b ! -o br-7ae5807ed71b -j ACCEPT
-A FORWARD -i br-7ae5807ed71b -o br-7ae5807ed71b -j ACCEPT
-A FORWARD -o br-347f06388923 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-347f06388923 -j DOCKER
-A FORWARD -i br-347f06388923 ! -o br-347f06388923 -j ACCEPT
-A FORWARD -i br-347f06388923 -o br-347f06388923 -j ACCEPT
-A OUTPUT -d 169.254.0.0/16 -j BareMetalInstanceServices
-A BareMetalInstanceServices -d 169.254.0.2/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.2.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.4.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.5.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.0.2/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.0.3/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.0.4/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 67 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 69 -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 123 -m comment --comment "Allow access to OBMCS local NTP service" -j ACCEPT
-A BareMetalInstanceServices -d 169.254.0.0/16 -p tcp -m tcp -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j REJECT --reject-with tcp-reset
-A BareMetalInstanceServices -d 169.254.0.0/16 -p udp -m udp -m comment --comment "See the Oracle-Provided Images section in the Oracle Bare Metal documentation for security impact of modifying or removing this rule" -j REJECT --reject-with icmp-port-unreachable
-A DOCKER -d 172.28.0.2/32 ! -i br-7ae5807ed71b -o br-7ae5807ed71b -p tcp -m tcp --dport 25565 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-347f06388923 -o br-347f06388923 -p tcp -m tcp --dport 25565 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-7ae5807ed71b ! -o br-7ae5807ed71b -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-347f06388923 ! -o br-347f06388923 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-7ae5807ed71b -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-347f06388923 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon May 13 04:58:32 2024
# Generated by iptables-save v1.8.5 on Mon May 13 04:58:32 2024
*security
:INPUT ACCEPT [31814:8369897]
:FORWARD ACCEPT [594:294921]
:OUTPUT ACCEPT [32828:11104762]
COMMIT
# Completed on Mon May 13 04:58:32 2024
# Generated by iptables-save v1.8.5 on Mon May 13 04:58:32 2024
*raw
:PREROUTING ACCEPT [33494:8728845]
:OUTPUT ACCEPT [32828:11104762]
COMMIT
# Completed on Mon May 13 04:58:32 2024
# Generated by iptables-save v1.8.5 on Mon May 13 04:58:32 2024
*mangle
:PREROUTING ACCEPT [33494:8728845]
:INPUT ACCEPT [32867:8432337]
:FORWARD ACCEPT [594:294921]
:OUTPUT ACCEPT [32828:11104762]
:POSTROUTING ACCEPT [33422:11399683]
COMMIT
# Completed on Mon May 13 04:58:32 2024
# Generated by iptables-save v1.8.5 on Mon May 13 04:58:32 2024
*nat
:PREROUTING ACCEPT [1235:64494]
:INPUT ACCEPT [211:12264]
:POSTROUTING ACCEPT [1191:79776]
:OUTPUT ACCEPT [1187:79572]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.28.0.0/16 ! -o br-7ae5807ed71b -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-347f06388923 -j MASQUERADE
-A POSTROUTING -s 172.28.0.2/32 -d 172.28.0.2/32 -p tcp -m tcp --dport 25565 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 25565 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-7ae5807ed71b -j RETURN
-A DOCKER -i br-347f06388923 -j RETURN
-A DOCKER -d 10.0.0.101/32 ! -i br-7ae5807ed71b -p tcp -m tcp --dport 25565 -j DNAT --to-destination 172.28.0.2:25565
-A DOCKER -d 10.0.1.2/32 ! -i br-347f06388923 -p tcp -m tcp --dport 25565 -j DNAT --to-destination 172.18.0.2:25565
COMMIT
# Completed on Mon May 13 04:58:32 2024
